Fix /lucky and menu drop down not overlapping cards

--- a/content/css/_mainmenu.scss
+++ b/content/css/_mainmenu.scss
@@ -358,7 +358,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index:10;
+    z-index:11;
     .navbar-collapse {
       background: rgba(27,23,19,0.1);
     }
